# asf4

./: .gitignore  README.md
sam_d5x_e5x/hal/utils/include/: parts.h
sam_d5x_e5x/hri/: hri_d51.h
sam_d5x_e5x/include/: sam.h
samd21/: AtmelStart.gpdsc  CMakeLists.txt  atmel_start_config.atstart  driver_init.c  driver_init.h
samd21/CMSIS/Include/: cmsis_gcc.h
samd21/armcc/: Makefile
samd21/config/: hpl_dmac_config.h  hpl_gclk_config.h  hpl_sercom_config.h  hpl_tc_config.h  peripheral_clk_config.h
samd21/documentation/: usb_protocol_hub.rst
samd21/examples/: driver_examples.c  driver_examples.h
samd21/gcc/: Makefile
samd21/gcc/gcc/: startup_samd21.c
samd21/hal/include/: hal_io.h  hpl_sleep.h
samd21/hal/utils/include/: utils.h
samd21/hpl/core/: hpl_core_m0plus_base.c  hpl_init.c
samd21/hpl/dmac/: hpl_dmac.c
samd21/hpl/gclk/: hpl_gclk.c
samd21/hpl/pm/: hpl_pm.c
samd21/hpl/rtc/: hpl_rtc.c
samd21/hpl/sercom/: hpl_sercom.c
samd21/hpl/sysctrl/: hpl_sysctrl.c
samd21/hpl/systick/: hpl_systick.c
samd21/hpl/tc/: hpl_tc.c
samd21/hpl/usb/: hpl_usb.c
samd21/include/: samd21g18a.h
samd21/usb/class/msc/device/: mscdf.c  mscdf.h
samd21/usb/device/: usbdc.c
samd51/: AtmelStart.env_conf  AtmelStart.gpdsc  atmel_start_config.atstart  atmel_start_pins.h  driver_init.c  driver_init.h
samd51/armcc/: Makefile
samd51/config/: hpl_gclk_config.h  hpl_rtc_config.h  hpl_sercom_config.h  peripheral_clk_config.h
samd51/examples/: driver_examples.c  driver_examples.h
samd51/gcc/: Makefile
samd51/hal/src/: hal_adc_sync.c
samd51/hpl/core/: hpl_init.c
samd51/hpl/rtc/: hpl_rtc.c
samd51/hpl/sercom/: hpl_sercom.c
samd51/hpl/usb/: hpl_usb.c
samd51/usb/class/msc/: spc_protocol.h
samd51/usb/class/msc/device/: mscdf.c
samd51/usb/device/: usbdc.c  usbdc.h
same54/include/: same54n19a.h  same54n20a.h  same54p19a.h  same54p20a.h
tools/: samd21.json  samd51.json  update_from_atmel_start.py
